# KaggleGoogleCapstone

./: .env.example  .gitignore  KAGGLE_WRITEUP.md  LICENSE  README.md  SECURITY_AUDIT.md  VIDEO_SCRIPT.md  docker-compose.yml
.deepsec/: config.json
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/agents/: agent_bridge.cpp  agent_bridge.hpp
backend/src/api/: routes.cpp  routes.hpp
backend/src/database/: db.cpp  db.hpp
backend/src/models/: models.hpp
backend/tests/: test_backend.cpp
cli/: package.json
cli/src/: index.ts
desktop/: README.md  main.js  package.json  preload.js
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/analytics/: progress_view.tsx
frontend/components/antigravity/: visualizer.tsx
frontend/components/dashboard/: roadmap_view.tsx
frontend/components/quiz/: quiz_view.tsx
frontend/components/study/: tutor_view.tsx
frontend/components/ui/: header.tsx
frontend/components/youtube/: transcript_player.tsx
frontend/lib/: api.ts  types.ts
python_agent/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
python_agent/agents/: coordinator.py  planner.py  progress.py  quiz.py  research.py  tutor.py
python_agent/studymate_adk_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_agent/tests/: test_agents.py
