[project]
name = "studymate-adk-service"
version = "0.1.0"
description = "StudyMate AI - Google ADK Agent Microservice using uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "google-genai>=0.1.1",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
